# aichat

./: .dockerignore  .gitignore  CLI-MODE.md  Dockerfile  README.md  config.example.yaml  consciousness.md  haiku.md  pyproject.toml
docs/: IDEAS.md  POSITIONING.md  TRUST_MODEL.md  USAGE.md  USE_CASES.md  WORKFLOWS.md
eval_results/: cache.db  classifications.jsonl
examples/mcp/: filesystem-smoke.yaml
examples/mcp/workspace/: README.md
examples/relay/: codex-claude-local.yaml  codex-ollama-local.yaml  fusion-ollama.yaml  local-command.yaml
src/aichat/: bridge.py  config.py  main.py  mcp_runtime.py  relay.py  setup.py  templates.py  transcript.py  wizard.py
src/aichat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/aichat/adapters/: generic.py  model_registry.yaml
src/aichat/mcp_servers/: __init__.py  filesystem.py
src/aichat/templates/: codex-claude-resume.yaml  codex-claude.yaml  fusion-mcp.yaml  ollama-codex-fresh.yaml  ollama-codex-resume.yaml
src/epistemic_classifier/: README.md  __init__.py  cache.py  classifier.py  eval.py  prompts.py  schema.py  segmenter.py
tests/: test_bridge_agents.py  test_cache.py  test_classifier.py  test_command_adapter.py  test_config.py  test_filesystem_mcp_server.py  test_init_cli.py  test_mcp_runtime.py  test_relay.py  test_segmenter.py  test_setup.py  test_templates.py  test_wizard.py
tests/fixtures/: eval_set_v1.jsonl  logo_design_transcript.md  synthetic_edge_transcript.md
